--- a/css/main.css
+++ b/css/main.css
@@ -63,62 +63,31 @@
     background-color: #f0f0f0;
 }
 
-.figure {
+
+.person {
+    height: 390px;
+    width: 300px;
+    background-color: "pink";
+    border: 1px solid gray;
+    margin: 20px;
     position: relative;
     float: left;
-    margin: 10px;
-    width: 180px;
-    height: 200px;
 }
 
-.figure img {
-    position: absolute;
-    display: inline;
-    left: 0;
-    width: 170px;
-    height: 170px;
-    opacity:1.0;
-    filter:alpha(opacity=100); /* For IE8 and earlier */
+.person img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    clip-path: circle(40%);
 }
 
-.figure:hover img {
-    -webkit-filter: blur(3px);
-    -moz-filter: blur(3px);
-    -o-filter: blur(3px);
-    -ms-filter: blur(3px);
-    filter: blur(3px);
-    opacity:1.0;
-    filter:alpha(opacity=100); /* For IE8 and earlier */
+.person:hover img {
+    transform: scale(-1, 1);
 }
 
-.figure span {
-    position: absolute;
-    display: inline;
-    left: 0;
-    width: 170px;
-    height: 170px;
-    background: #000;
-    color: #fff;
-    visibility: hidden;
-    opacity: 0;
-    z-index: 100;
+.bio {
+    margin: 15px;
+    color: gray;
 }
 
-.figure p {
-    position: absolute;
-    top: 45%;
-    width: 170px;
-    font-size: 110%;
-}
-
-.figure:hover span {
-    visibility: visible;
-    opacity: .4;
-}
-
-.caption {
-    position: absolue;
-    width: 180px;
-    top: 170px;
-    text-align: center !important;
-}
