--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,4 @@
 
-h2 {
-    padding-left: 20px;
-}
-
 body {
     background-color: #daeefc;
     color: #1B1862;
@@ -27,11 +23,8 @@ body {
     color: #1B1862;
 }
 
-
 #about {
     position: static;
-    /* width: 100vw; */
-    height: 100vh;
     padding-top: 100px;
     padding-left: 50px;
     padding-right: 50px;
@@ -39,33 +32,47 @@ body {
 }
 
 .contentbox {
-    /* border: 1px solid gray; */
-    /* margin: 20px; */
     padding: 20px;
-    flex: 1;
     background: white;
     border: 1px solid #1B1862;
+    margin-bottom:50px;
+}
+
+#sponsors {
+    display: flex;
 }
 
 #leaders {
     position: relative;
-    width: 100vw;
-    height: 60vh;
+    height: 450px;
     padding: 20px;
 }
 
+#leaders, h2 {
+    padding-left:20px
+}
+
+
 #facilitators {
     position: relative;
-    width: 100vw;
-    height: 60vh;
+    height: 450px;
     padding: 20px;
+    padding-top:50px;
+}
+
+#facilitators, h2 {
+    padding-left:20px
 }
 
 #people {
     position: relative;
-    width: 100vw;
-    height: 60vh;
+    height: 450px;
     padding: 20px;
+    padding-top:50px;
+}
+
+#people, h2 {
+    padding-left:20px
 }
 
 .person {
@@ -76,14 +83,6 @@ body {
     margin: 20px;
     position: relative;
     float: left;
-}
-
-.person.seattle {
-    /* border: 1px solid #FC2230; */
-}
-
-.person.montreal {
-    /* border: 1px solid #1B1862; */
 }
 
 .person img {
@@ -99,6 +98,15 @@ body {
 }
 
 .bio {
-    margin: 15px;
+    padding: 15px;
 }
 
+#footer-placeholder {
+    padding-top: 30px;
+}
+
+#footer {
+    padding-top:30px;
+    text-align: center;
+    padding-bottom:30px;
+}
