--- a/css/main.css
+++ b/css/main.css
@@ -2,33 +2,46 @@
 body {
     background-color: #daeefc;
     color: #1B1862;
+    font-size: 12pt;
+    /* font-family: 'Darker Grotesque', sans-serif; */
+    /* font-family: 'Arsenal', sans-serif; */
+    /* font-family: 'Athiti', sans-serif; */
+    /* font-family: 'Pavanam', sans-serif; */
+    font-family: 'Assistant', sans-serif;
+}
+
+h2 {
+    font-family: 'Reem Kufi', sans-serif;
 
 }
 
 .bg-light {
-    background-color: white!important
+    /* background-color: white!important */
+    background-color: #1B1862!important;
 }
 
 #nav-placeholder {
     position: fixed;
+    transform: translateY(120px);
+    box-shadow: 1px -1px 20px 7px #daeefc
 }
 
 .navbar-light:hover .navbar-nav:hover .nav-link:hover {
-    font-size: 20px;
+    font-size: 22px;
     color: #FC2230;
 }
 
 .navbar-light .navbar-nav .nav-link {
-    font-size: 20px;
-    color: #1B1862;
+    font-size: 22px;
+    color: white;
 }
 
 #about {
     position: static;
-    padding-top: 100px;
+    padding-top: 220px;
     padding-left: 50px;
     padding-right: 50px;
-    font-size: 18px;
+    /* font-size: 20px; */
 }
 
 .contentbox {
@@ -42,37 +55,27 @@ body {
     display: flex;
 }
 
+#people {
+    display: flex;
+    flex-direction: column;
+}
+
+#people h2 {
+    padding-left: 20px;
+}
+
 #leaders {
-    position: relative;
-    height: 450px;
-    padding: 20px;
+    padding-left: 20px;
 }
-
-#leaders, h2 {
-    padding-left:20px
-}
-
 
 #facilitators {
-    position: relative;
-    height: 450px;
-    padding: 20px;
+    padding-left: 20px;
     padding-top:50px;
 }
 
-#facilitators, h2 {
-    padding-left:20px
-}
-
-#people {
-    position: relative;
-    height: 450px;
-    padding: 20px;
+#community {
+    padding-left: 20px;
     padding-top:50px;
-}
-
-#people, h2 {
-    padding-left:20px
 }
 
 .person {
@@ -83,6 +86,7 @@ body {
     margin: 20px;
     position: relative;
     float: left;
+    overflow-y: scroll;
 }
 
 .person img {
@@ -103,10 +107,13 @@ body {
 
 #footer-placeholder {
     padding-top: 30px;
+    /* border: 1px solid #1B1862; */
 }
 
 #footer {
     padding-top:30px;
     text-align: center;
     padding-bottom:30px;
+    background: #1B1862;
+    color: #daeefc;
 }
