--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,10 @@ h2 {
     color: white;
 }
 
+.lang {
+    color: #1B1862;
+    transform: translate(90vw, 10vh)
+}
 .lang:hover{
     color: #FC2230;
     cursor: pointer;
