--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,9 @@ body {
     /* font-family: 'Pavanam', sans-serif; */
     font-family: 'Assistant', sans-serif;
 }
+body b {
+    font-weight: 700;
+}
 
 #figure {
     padding-top: 100px;
@@ -58,6 +61,9 @@ h2 {
 
 .contentbox {
     padding: 20px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
     background: white;
     border: 1px solid #1B1862;
     margin-bottom:50px;
