adding cookies to darkmode toggle

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,11 @@ body b {
     font-size: 14pt;
 }
 
+#banner {
+    background-color: 1B1862;
+    height: 100px;
+}
+
 #figure {
     padding-top: 100px;
     padding-left: 50px;
